styles.css
:root {
  --t1: clamp(3rem, calc(7vw + 1rem), 6rem);
  --t2: clamp(2rem, calc(4vw + 1rem), 3rem);
  --t3: clamp(1.25rem, calc(2vw + 1rem), 2rem);
  --par: clamp(1rem, calc(1vw + 1rem), 1.25rem);
}

body{
  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
  font-family: Urban;
  /* background-color: #0b1a36; */
  background: #050E14;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

h1{
  margin: 0;
  font-size: var(--t1);
  color: rgb(240, 245, 243);
}
h2{
  margin: 0;
  font-size: var(--t2);
  color: rgb(240, 245, 243);
}
h3{
  margin: 0;
  font-size: var(--t3);
  color: rgb(240, 245, 243);
}
p{
  margin: 0;
  font-size: var(--par);
  color: rgb(240, 245, 243);
}

a{
  text-decoration: none;
}


/********************** HOME PAGE ********************/

/* .sun{
  width: 120vw;
  aspect-ratio: 1/1;
  background: url(assets/noise-light.png), radial-gradient(circle, #015ba0, #006CBC);
  border-radius: 50%;
  box-shadow: 0 0 60px 35px #277fc2 inset, 0 0 80px 5px #277fc2, 0 0 50px 20px #006CBC, 0 0 60px 20px #1A63C0,  0 0 400px 100px #006CBC;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, 0%);  
  z-index: -1;
} */

#navbar{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 7vh;
  background-color: #0F2739;
  gap: 2vw;
  position: sticky;
  top: 0;
  z-index: 3;
}

#hero{
  width: 100%;
  min-height: 100vh;
  padding: 70px 10% 0;
  position: relative;
}

.hero-content{
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 5vw;
  max-width: 80vw;
  margin-top: 5vh;
}

#projects{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 100vh;
}

.project-image{
  width: 23vw;
  aspect-ratio: 1/1.3;
  border-radius: 30px;
  object-fit: cover;
  position: relative;
  translate: 0px 3px;
  z-index: 1;
}

.project-card{
  width: 25vw;
  background: #07182E;
  aspect-ratio: 1/1.25;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 30px;
  position: relative;
  overflow: hidden;
}

.project-card-colors{
  width: 15vw;
  aspect-ratio: 1/4;
  position: absolute;
  border-radius: 50px;
  background-image: linear-gradient(#FF80FF 0%, #3487C7 100%);
  transform: rotate(-30deg);
}

.spin-fast{
  animation: fast 1s cubic-bezier(.4,.82,.5,.94);
}

.spin-slow{
  animation: slow 4.5s linear infinite;
}

.project-card.big-card{
  transform: scale(1.5);
  z-index: 2;
}

@keyframes fast{
  from { 
    transform: rotate(-30deg);
  }
  to {
    transform: rotate(330deg);
  }
}

@keyframes slow{
  from { 
    transform: rotate(-30deg);
  }
  to {
    transform: rotate(330deg);
  }
}

#about{
  display: flex;
  justify-content: center;
  align-items: center;
  aspect-ratio: 1/0.75;
  text-align: center;
  margin: 5vw;
  gap: 5vw;
}

.about-responsive{
  width: 30vw;
  aspect-ratio: 1/1.4;
  object-fit: cover;
}

#my-pic{
  width: 30vw;
  aspect-ratio: 1/1;
  border-radius: 100px;
  object-fit: cover;
  box-shadow: -10px -10px 30px -10px pink,
  10px 10px 30px -10px lightblue;
  animation: breathe 10s linear infinite;
}

@keyframes breathe{
  0%{
    box-shadow: 0px 0px 30px 10px pink;
  }
  25%{
    box-shadow: -20px -20px 20px -10px pink,
    20px 20px 20px -10px lightblue;
  }
  50%{
    box-shadow:0px 0px 20px 10px lightblue;
  }
  75%{
    box-shadow: 20px -20px 20px -10px pink,
    -20px 20px 20px -10px lightblue;
  }
  100%{
    box-shadow: 0px 0px 30px 10px pink;
  }
}

#footer{
  display: flex;
  justify-content: space-between;
  align-items: center;
  aspect-ratio: 1/0.0625;
  margin: 0vw 2vw 0vw 2vw;
}



/*************** PROJECTS PAGE *******************/

